define basic styles on numbers

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="numberContainer">1</div>
-        <div class="numberContainer">2</div>
+        <div class="numberContainer" id="decimal">1</div>
+        <div class="numberContainer" id="unit">2</div>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
