--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <div id="decimal" class="numberContainer">0</div>
-        <div id="unit" class="numberContainer">0</div>
+        <div id="decimal" class="numberContainer"></div>
+        <div id="unit" class="numberContainer"></div>
     </div>
     <script src="./index.js"></script>
 </body>
