add styles to number layers

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <div id="decimal" class="numberContainer"></div>
-        <div id="unit" class="numberContainer"></div>
+        <div class="flipCard">
+            <div class="top">4</div>
+            <div class="bottom">4</div>
+        </div>
     </div>
     <script src="./index.js"></script>
 </body>
