add before and after

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="flipCard">
-            <div class="top">4</div>
-            <div class="bottom">4</div>
+        <div class="flipCard flip">
+            <div class="top">5</div>
+            <div class="bottom">5</div>
         </div>
     </div>
     <script src="./index.js"></script>
